# finworth

./: .gitignore  README.md  examples.py  pyproject.toml
src/finworth/: __init__.py  __main__.py  ai.py  core.py  emi.py  epf.py  fd.py  gratuity.py  mcp_server.py  mf.py  nps.py  planning.py  ppf.py  rd.py  salary.py  stocks.py  tax.py  workflows.py
tests/: test_finworth.py
