[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finworth"
version = "0.1.0"
description = "Indian financial calculators — MF, Stocks, FD, RD. XIRR, CAGR, SIP, capital gains, TDS, brokerage."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Vikas Singh", email = "viki.singh@outlook.com"}]
keywords = ["finance", "india", "mutual-funds", "stocks", "xirr", "sip", "fd", "rd", "capital-gains", "tds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/vikisingh23/finworth"
Repository = "https://github.com/vikisingh23/finworth"
Issues = "https://github.com/vikisingh23/finworth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
